# ABCD-Algorithm-for-Tridiagonal-Matrix-Solver

./: CMakeLists.txt  README.md
src/: get_matrices.cpp  get_matrices.h  main.cpp  partition.cpp  partition.h  read_matrix.cpp  read_matrix.h  utils.cpp  utils.h
